core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_aggregate__single_measurement__no_group_by_aggregate_error-2.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT count(f64_field) + f64_field FROM data\")"
---
rewriting statement
caused by
gather information about select statement
caused by
Error during planning: mixing aggregate and non-aggregate columns is not supported
